crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR5501_collapsible_else_if.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    CollapsibleElseIf: {}
  location:
    row: 36
    column: 8
  end_location:
    row: 37
    column: 16
  fix: ~
  parent: ~
- kind:
    CollapsibleElseIf: {}
  location:
    row: 44
    column: 8
  end_location:
    row: 47
    column: 16
  fix: ~
  parent: ~

