crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR5501_else_if_used.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    ElseIfUsed: {}
  location:
    row: 6
    column: 4
  end_location:
    row: 9
    column: 12
  fix: ~
  parent: ~
- kind:
    ElseIfUsed: {}
  location:
    row: 24
    column: 4
  end_location:
    row: 29
    column: 15
  fix: ~
  parent: ~
- kind:
    ElseIfUsed: {}
  location:
    row: 33
    column: 4
  end_location:
    row: 37
    column: 16
  fix: ~
  parent: ~
- kind:
    ElseIfUsed: {}
  location:
    row: 41
    column: 4
  end_location:
    row: 47
    column: 16
  fix: ~
  parent: ~

