crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR6301_no_self_use.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
no_self_use.py:5:28: PLR6301 Method `developer_greeting` could be a function or static method
  |
4 | class Person:
5 |     def developer_greeting(self, name):  # [no-self-use]
  |                            ^^^^ PLR6301
6 |         print(f"Greetings {name}!")
  |

no_self_use.py:8:20: PLR6301 Method `greeting_1` could be a function or static method
  |
6 |         print(f"Greetings {name}!")
7 | 
8 |     def greeting_1(self):  # [no-self-use]
  |                    ^^^^ PLR6301
9 |         print("Hello!")
  |

no_self_use.py:11:20: PLR6301 Method `greeting_2` could be a function or static method
   |
 9 |         print("Hello!")
10 | 
11 |     def greeting_2(self):  # [no-self-use]
   |                    ^^^^ PLR6301
12 |         print("Hi!")
   |

no_self_use.py:55:25: PLR6301 Method `abstract_method` could be a function or static method
   |
53 | class Sub(Base):
54 |     @override
55 |     def abstract_method(self):
   |                         ^^^^ PLR6301
56 |         print("concret method")
   |


