crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLW0123_eval_usage.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    EvalUsage: ~
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 4
  fix: ~
  parent: ~

