crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLW0130_duplicate_value.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
duplicate_value.py:4:35: PLW0130 Duplicate value `"value1"` in set
  |
4 | # Errors.
5 | ###
6 | incorrect_set = {"value1", 23, 5, "value1"}
  |                                   ^^^^^^^^ PLW0130
7 | incorrect_set = {1, 1}
  |

duplicate_value.py:5:21: PLW0130 Duplicate value `1` in set
  |
5 | ###
6 | incorrect_set = {"value1", 23, 5, "value1"}
7 | incorrect_set = {1, 1}
  |                     ^ PLW0130
8 | 
9 | ###
  |


