crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLW0131_named_expr_without_context.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
named_expr_without_context.py:2:2: PLW0131 Named expression used without context
  |
2 | # Incorrect
3 | (a := 42)
  |  ^^^^^^^ PLW0131
4 | if True:
5 |     (b := 1)
  |

named_expr_without_context.py:4:6: PLW0131 Named expression used without context
  |
4 | (a := 42)
5 | if True:
6 |     (b := 1)
  |      ^^^^^^ PLW0131
7 |     print(b)
  |


