crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLW0149_while_used.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: WhileUsed
    body: "Used `while` loop"
    suggestion: ~
    fixable: false
  location:
    row: 2
    column: 0
  end_location:
    row: 4
    column: 13
  fix: ~
  parent: ~
- kind:
    name: WhileUsed
    body: "Used `while` loop"
    suggestion: ~
    fixable: false
  location:
    row: 6
    column: 0
  end_location:
    row: 9
    column: 25
  fix: ~
  parent: ~

